# platebuster-thesis

./: .env.example  .gitignore  README.en.md  README.md  THIRD_PARTY_NOTICES.md  platebuster-cloud.command  platebuster-full.command  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
cloud/: README.md  build_bundle.sh  requirements.txt  run_all.sh
data/: README.md
infra/cvat/: README.md
notebooks/: 01_dataset_explorer.ipynb
scripts/: analyze_rfdetr_nano.py  benchmark_latency.py  build_ccpd_dataset.py  build_keypoint_crops.py  build_openalpr_dataset.py  build_unified_dataset.py  collect_results.py  diagnose_training.py  download_ccpd.py  download_roboflow.py  prepare_cvat_uploads.py  qc_corners.py  qc_unified.py  sample_for_annotation.py  sanity_check_ccpd.py  visualize_predictions.py
scripts/annotation/: corner_annotator.py  mobile_corner_annotator.py
scripts/training/: common.py  convert_yolo_to_coco.py  eval_classical.py  eval_two_stage_pipeline.py  (+5 more)
streamlit_app/: README.md  app.py  inference.py  prediction_log.py  requirements.txt
streamlit_cloud/: README.md  app.py  inference.py  pyproject.toml  requirements.txt
streamlit_cloud/.streamlit/: config.toml
streamlit_cloud/_compare_component/: index.html
streamlit_cloud/_zoom_component/: index.html
streamlit_cloud_eval/: .gitignore  README.md  app.py  bootstrap.py  requirements.txt
streamlit_cloud_latency_probe/: .gitignore  README.md  app.py  inference.py  manifest.json  requirements.txt
tests/: test_ccpd_parser.py  test_openalpr_parser.py
weights/: README.md
(+66 files in other folders)
